[package]
name = "yape"
version = "0.1.0"
authors = ["Fernando Luiz Parisotto <fernando.parisotto@gmail.com>"]
edition = "2018"
description = "A simple pixel engine for game dev and graphics"
keywords = ["gamedev", "game-engine", "graphics"]
categories = ["game-engines", "graphics"]
readme = "README.md"
repository = "https://github.com/fparisotto/yape/"
license = "MIT"

[dependencies]
minifb = "0.16"
rand = "0.7.3"
noise = "0.6.0"
